# echofeedai

./: .commitlintrc.json  .gitignore  .releaserc.json  CHANGELOG.md  PROJECT ABSTRACT.docx  README.md  newfile.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.husky/: post-commit  post-merge  pre-commit
backend/: .env  .env.example  .gitignore  app.py  bitest.py  bullet_summary.py  feedback_comparison.py  generate_feedback_map.py  main.py  manager_requirements.txt  pyproject.toml  test.py
backend-py-m/models/: groq.py
backend/audio_processing/: source_to_text.py  speech_to_text.py  tone_recognition.py
backend/input_generation/: question_generator.py  speech_text_processing.py
backend/input_generator/: question_generator.py
backend/output_generation/: threshold_generator.py
backend/shared/: gemini_ai_model.py
backend/templates/: index.html  rec.html  result.html
backend/utils/: generate_feedback_map.py
echofeedai-backend/: .env.example  .gitignore  README.md  dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
echofeedai-backend/prisma/: schema.prisma
echofeedai-backend/src/: index.ts
echofeedai-frontend/: .env  .env.example  .gitignore  README.md  dockerfile  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
echofeedai-frontend/app/: entry.server.tsx  i18n.ts  root.tsx  tailwind.css
echofeedai-frontend/src/: App.tsx  i18n.ts  main.tsx
echofeedai-model/: .env.example  README.md  app.py  main.py  requirements.txt  start.sh
echofeedai-model/models/: gemini.py  groq.py
frontend/: server.js
(+193 files in other folders)
