[tool.poetry]
package-mode = false
name = "backend"
version = "0.1.0"
description = ""
authors = ["leocodeio <basicleo@787>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
speechrecognition = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
